--- a/exercises/01_chatbot.ipynb
+++ b/exercises/01_chatbot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "459e7eaf",
+   "id": "92c97e80",
    "metadata": {},
    "source": [
     "# Building a Chatbot\n",
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc69a6a2",
+   "id": "6c6a52e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c18a3365",
+   "id": "86235cd0",
    "metadata": {},
    "source": [
     "Today we'll be working with Databricks LLMs.\n",
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36553c21",
+   "id": "64bc81ea",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -43,39 +43,16 @@
    "source": [
     "from databricks_langchain import ChatDatabricks\n",
     "from langchain.messages import AIMessage, HumanMessage\n",
-    "\n",
-    "model = ChatDatabricks(endpoint=\"databricks-claude-sonnet-4-5\")\n",
+    "from llm import model\n",
     "\n",
     "response = model.invoke(\"hi\")\n",
     "print(response.content)"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "99a5c1b1",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
-   "source": [
-    "Now it's your turn. Solve the exercises below.\n",
-    "\n",
-    "To test your chatbot, run this on the terminal:\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b340dfb",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d3bc200b",
+   "id": "0e9fe7f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,6 +62,7 @@
     "#\n",
     "# Fill in the lines inside <solution></solution>.\n",
     "#\n",
+    "\n",
     "\n",
     "def chat_shell():\n",
     "    # Initialize chat history\n",
@@ -97,13 +75,15 @@
     "\n",
     "        # Exercise 1.1: Add user message to the chat history.\n",
     "        # <solution>\n",
-    "        chat_history.append(HumanMessage(content=user_input))\n",
+    "        # TODO: Implement this\n",
+    "        pass\n",
     "        # </solution>\n",
     "\n",
     "        # Exercise 1.2: Invoke the model to get a response.\n",
     "        # Hint: Use `model.invoke(...)`\n",
     "        # <solution>\n",
-    "        response = model.invoke(chat_history)\n",
+    "        # TODO: Implement this\n",
+    "        pass\n",
     "        # </solution>\n",
     "        print(f\"AI: {response.content}\")\n",
     "\n",
@@ -114,10 +94,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "761f66f7",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
+   "id": "c3fcf542",
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Run the chatbot\n",
@@ -125,40 +103,36 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "263b2b6f",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "id": "638925fc",
+   "id": "31f3eaf8",
    "metadata": {},
    "source": [
     "## Exercise 2 (Bonus): Streamlit Chatbot\n",
     "Use streamlit to build a simple chat interface.\n",
+    "Bonus points for using LangGraph.\n",
     "\n",
-    "To test it, deploy the app.py to databricks apps using the UI."
+    "To test it, deploy the app.py to databricks apps using the UI.\n",
+    "\n",
+    "We'll need a couple files. That's why we create a directory first.\n",
+    "Then we create a requirements.txt file, an app.yaml file and finally the app.py file. \n",
+    "The app.yaml file defines the command to run the app.py file.\n",
+    "The requirements.txt file defines the dependencies."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "319adc5e",
+   "id": "218d92b9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %mkdir streamlit_app_01"
+    "%mkdir streamlit_app_01"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7993fe5",
+   "id": "217b15b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f79cb13b",
+   "id": "c058bd97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,44 +156,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac20ef86",
+   "id": "ba91ecc3",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%writefile streamlit_app_01/app.py\n",
     "import streamlit as st\n",
-    "from databricks_langchain import ChatDatabricks\n",
-    "from langchain_core.messages import HumanMessage, AIMessage\n",
+    "from langchain_core.messages import AIMessage, HumanMessage\n",
     "\n",
     "st.title(\"Chatbot\")\n",
     "\n",
-    "if \"messages\" not in st.session_state:\n",
-    "    st.session_state.messages = []\n",
-    "\n",
-    "for message in st.session_state.messages:\n",
-    "    with st.chat_message(\"user\" if isinstance(message, HumanMessage) else \"assistant\"):\n",
-    "        st.markdown(message.content)\n",
-    "\n",
-    "if prompt := st.chat_input(\"What is up?\"):\n",
-    "    st.session_state.messages.append(HumanMessage(content=prompt))\n",
-    "    with st.chat_message(\"user\"):\n",
-    "        st.markdown(prompt)\n",
-    "\n",
-    "    with st.chat_message(\"assistant\"):\n",
-    "        model = ChatDatabricks(endpoint=\"databricks-claude-sonnet-4-5\")\n",
-    "        \n",
-    "        # Exercise 2.1: Invoke the model with the message history\n",
-    "        # Hint: input to invoke should be st.session_state.messages\n",
-    "        # <solution>\n",
-    "        response = model.invoke(st.session_state.messages)\n",
-    "        # </solution>\n",
-    "        \n",
-    "        st.markdown(response.content)\n",
-    "        \n",
-    "        # Exercise 2.2: Append the response to the session state messages\n",
-    "        # <solution>\n",
-    "        st.session_state.messages.append(response)\n",
-    "        # </solution>"
+    "# Exercise 2.1: Invoke the model with the message history\n",
+    "# <solution>\n",
+    "# TODO: Implement this\n",
+    "pass\n",
+    "# </solution>"
    ]
   }
  ],
