--- a/exercises/04_react.ipynb
+++ b/exercises/04_react.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0848d2a4",
+   "id": "aae95070",
    "metadata": {},
    "source": [
     "# Exercise 4: ReAct Agent\n",
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b98a73ff",
+   "id": "0438a182",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44f8c729",
+   "id": "0fb34a04",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,18 +45,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "afb945aa",
+   "id": "96cff30f",
    "metadata": {
     "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": [
-    "model = ChatDatabricks(endpoint=\"databricks-claude-sonnet-4-5\")"
+    "from llm import model"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2f070984",
+   "id": "fcbd1ce6",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9514e7c7",
+   "id": "7ed2b884",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,18 +88,14 @@
     "# Exercise 4.1: Define the divide tool\n",
     "# Hint: Use the @tool decorator. The function should take two ints and return a float.\n",
     "# <solution>\n",
-    "@tool\n",
-    "def divide(a: int, b: int) -> float:\n",
-    "    \"\"\"Divide `a` and `b`.Args: a: First int, b: Second int\"\"\"\n",
-    "    return a / b\n",
-    "\n",
-    "\n",
+    "# TODO: Implement this\n",
+    "pass\n",
     "# </solution>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "145f2f52",
+   "id": "433e6d60",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -119,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d55f98b",
+   "id": "3118d810",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -162,11 +158,8 @@
     "            # Exercise 4.2: Handle the tool call. That is, call the function with the arguments\n",
     "            # requested by the LLM and add the result (as a `ToolMessage`) to the conversation history.\n",
     "            # <solution>\n",
-    "            tool = tools_by_name[tool_call[\"name\"]]\n",
-    "            observation = tool.invoke(tool_call[\"args\"])\n",
-    "            result.append(\n",
-    "                ToolMessage(content=observation, tool_call_id=tool_call[\"id\"])\n",
-    "            )\n",
+    "            # TODO: Implement this\n",
+    "            pass\n",
     "            # </solution>\n",
     "        return {\"messages\": result}\n",
     "\n",
@@ -177,26 +170,23 @@
     "        messages = state[\"messages\"]\n",
     "        last_message = messages[-1]\n",
     "        # <solution>\n",
-    "        if last_message.tool_calls:\n",
-    "            return \"tool_node\"\n",
-    "        return END\n",
+    "        # TODO: Implement this\n",
+    "        pass\n",
     "        # </solution>\n",
     "\n",
     "    # Exercise 4.4: Initialize graph and add nodes\n",
     "    # Hint: Use StateGraph(MessagesState). Add nodes using .add_node(\"name\", function).\n",
     "    # <solution>\n",
-    "    agent_builder = StateGraph(MessagesState)\n",
-    "    agent_builder.add_node(\"llm_call\", llm_call)\n",
-    "    agent_builder.add_node(\"tool_node\", tool_node)\n",
+    "    # TODO: Implement this\n",
+    "    pass\n",
     "    # </solution>\n",
     "\n",
     "    # Exercise 4.5: Add edges\n",
     "    # Hint: Use .add_edge(start, end) and .add_conditional_edges(source, condition, path_map).\n",
     "    # Connect START -> llm_call, then conditionally to tool_node or END, and tool_node back to llm_call.\n",
     "    # <solution>\n",
-    "    agent_builder.add_edge(START, \"llm_call\")\n",
-    "    agent_builder.add_conditional_edges(\"llm_call\", should_continue, [\"tool_node\", END])\n",
-    "    agent_builder.add_edge(\"tool_node\", \"llm_call\")\n",
+    "    # TODO: Implement this\n",
+    "    pass\n",
     "    # </solution>\n",
     "\n",
     "    return agent_builder.compile()\n",
@@ -205,14 +195,15 @@
     "# Exercise 4.6: Compile the graph\n",
     "# Hint: Call .compile() on the graph builder.\n",
     "# <solution>\n",
-    "agent = build_agent(tools)\n",
+    "# TODO: Implement this\n",
+    "pass\n",
     "# </solution>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad73dc99",
+   "id": "d9773e47",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -224,8 +215,8 @@
     "# Exercise 4.7: Invoke the agent.\n",
     "# Hint: Initialize the conversation history with the query wrapped in a `HumanMessage` and use agent.invoke({\"messages\": messages})\n",
     "# <solution>\n",
-    "messages = [HumanMessage(content=math_query)]\n",
-    "response = agent.invoke({\"messages\": messages})\n",
+    "# TODO: Implement this\n",
+    "pass\n",
     "# </solution>\n",
     "\n",
     "# show the message history\n",
@@ -236,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f422700",
+   "id": "14807886",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,28 +238,25 @@
     "\n",
     "# Exercise 4.9: Use the above to create a search tool\n",
     "# <solution>\n",
-    "@tool\n",
-    "def web_search(query: str, max_results: int = 5):\n",
-    "    \"\"\"Run a web search\"\"\"\n",
-    "    return str(DDGS().text(query, max_results=max_results))\n",
-    "\n",
-    "\n",
+    "# TODO: Implement this\n",
+    "pass\n",
     "# </solution>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a662c8d7",
-   "metadata": {},
+   "id": "bbe76d92",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
    "outputs": [],
    "source": [
     "search_query = \"What is Altana?\"\n",
     "# Exercise 4.9: Build and invoke the agent.\n",
     "# <solution>\n",
-    "agent = build_agent([web_search])\n",
-    "messages = [HumanMessage(content=search_query)]\n",
-    "response = agent.invoke({\"messages\": messages})\n",
+    "# TODO: Implement this\n",
+    "pass\n",
     "# </solution>\n",
     "\n",
     "for m in response[\"messages\"]:\n",
@@ -277,17 +265,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c3043f1",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
+   "id": "6ea71a48",
+   "metadata": {},
    "source": [
     "## Demo: Functional API\n",
     "\n",
     "LangGraph also supports a functional API that relies on decorators.\n",
-    "This can be more intuitive for python developers.\n",
-    "\n",
-    "\n",
+    "This can be more intuitive for python developers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7800369a",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
     "def build_agent_func(tools):\n",
     "    # Augment the LLM with tools\n",
     "    tools_by_name = {tool.name: tool for tool in tools}\n",
@@ -340,11 +335,20 @@
     "        messages = add_messages(messages, model_response)\n",
     "        return messages\n",
     "\n",
-    "    return agent\n",
-    "\n",
-    "\n",
+    "    return agent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f5bc6d01",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
+   "outputs": [],
+   "source": [
     "agent = build_agent_func([add, multiply, divide])\n",
-    "Invoke\n",
+    "# Invoke\n",
     "for chunk in agent.stream(messages, stream_mode=\"updates\"):\n",
     "    print(chunk)\n",
     "    print(\"\\n\")"
@@ -352,32 +356,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfdae0f4",
+   "id": "e7067bdd",
    "metadata": {},
    "source": [
-    "# Exercise 4.10 (Bonus): Persistence\n",
+    "# Exercise 4.10 (Bonus): Turn the agent into a chatbot.\n",
     "\n",
-    "Try asking what your last query was. How can we get this to work?\n",
     "Hint: We need a checkpointer: https://docs.langchain.com/oss/python/langgraph/persistence#checkpoints\n",
     "\n",
     "<solution>\n",
-    "from langchain.checkpointers.memory import InMemorySaver\n",
-    "from langchain.agents import create_agent\n",
-    "\n",
-    "checkpointer = InMemorySaver()\n",
-    "agent = create_agent(tools, checkpointer=checkpointer)\n",
-    "\n",
-    "pass a config with a thread_id to the agent\n",
-    "response_1 = agent.invoke({\n",
-    "    \"messages\": [HumanMessage(content=\"Hello my name is Tore.\")]}, \n",
-    "    config={\"configurable\": {\"thread_id\": \"1\"}})\n",
-    "response_1[\"messages\"][-1].pretty_print()\n",
-    "\n",
-    "pass the same thread_id to continue the conversation\n",
-    "response_2 = agent.invoke({\n",
-    "    \"messages\": [HumanMessage(content=\"What is my name?\")]}, \n",
-    "    config={\"configurable\": {\"thread_id\": \"1\"}})\n",
-    "response_2[\"messages\"][-1].pretty_print()\n",
+    "TODO: Implement this\n",
+    "pass\n",
     "</solution>"
    ]
   }
