--- a/exercises/05_mcp.ipynb
+++ b/exercises/05_mcp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0281e6de",
+   "id": "9736c4b0",
    "metadata": {},
    "source": [
     "# Exercise 5: Intro to MCP\n",
@@ -15,17 +15,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a1470d4",
+   "id": "00f12c05",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %mkdir custom_mcp_server"
+    "%mkdir custom_mcp_server"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22b814e0",
+   "id": "d8048446",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad142831",
+   "id": "8e6f397f",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "176edb68",
+   "id": "68d36dae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b697059d",
+   "id": "044ed8f2",
    "metadata": {},
    "source": [
     "# Deployment\n",
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac622b62",
+   "id": "7921236d",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6bd5ac22",
+   "id": "782becf7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2e3f92d",
+   "id": "63bc151a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08d6d615",
+   "id": "e4093582",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,9 +170,8 @@
     "        # ),\n",
     "        DatabricksMCPServer(\n",
     "            # <solution>\n",
-    "            name=\"MyServer\",\n",
-    "            url=\"http://0.0.0.0:8000/sse\",\n",
-    "            workspace_client=custom_mcp_server_workspace_client,\n",
+    "            # TODO: Implement this\n",
+    "            pass\n",
     "            # </solution>\n",
     "        ),\n",
     "    ]\n",
@@ -181,7 +180,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "052e4fa4",
+   "id": "2f796e6d",
    "metadata": {},
    "source": [
     "\n",
@@ -191,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e178b1fe",
+   "id": "ff5bf4d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +273,7 @@
     "    return workflow.compile()\n",
     "\n",
     "\n",
-    "# Initialize the entire agent, including MCP tools and workflow\n",
+    "# Initialize the agent, including MCP tools and workflow\n",
     "def initialize_agent():\n",
     "    \"\"\"Initialize the agent with MCP tools\"\"\"\n",
     "    # Create MCP tools from the configured servers\n",
@@ -288,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b4b78ef",
+   "id": "a7a67664",
    "metadata": {},
    "outputs": [],
    "source": [
