--- a/exercises/07_coding_agent.ipynb
+++ b/exercises/07_coding_agent.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ea57a7c6",
+   "id": "5deaa18e",
    "metadata": {},
    "source": [
     "# Exercise 7: Coding Agent - \"Plan in Code\"\n",
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5375f900",
+   "id": "140d2c9c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ded3588",
+   "id": "a83a4e54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec527139",
+   "id": "5cbacac4",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "075614ee",
+   "id": "2f417a28",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -83,22 +83,14 @@
     "# We want the agent to use this to process search results.\n",
     "# Hint: Use `llm.invoke` with a prompt.\n",
     "# <solution>\n",
-    "def synthesize(content: str) -> str:\n",
-    "    \"\"\"\n",
-    "    Synthesizes/Summarizes the provided content using an LLM.\n",
-    "    \"\"\"\n",
-    "    print(f\"--> [Tool: Synthesize] Processing {len(content)} chars...\")\n",
-    "    prompt = f\"Summarize and synthesize the following information:\\n\\n{content}\"\n",
-    "    response = llm.invoke(prompt)\n",
-    "    return response.content\n",
-    "\n",
-    "\n",
+    "# TODO: Implement this\n",
+    "pass\n",
     "# </solution>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "079da082",
+   "id": "307a7c27",
    "metadata": {},
    "source": [
     "## 2. Setup Code Executor\n",
@@ -109,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9cf57e2",
+   "id": "0c1892d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,16 +109,14 @@
     "# Inject `search` and `synthesize` into the environment.\n",
     "# Hint: Inject tools into `interpreter.state`.\n",
     "# <solution>\n",
-    "interpreter = LocalPythonExecutor(additional_authorized_imports=[\"datetime\", \"math\"])\n",
-    "# Inject our custom functions into the global scope of the interpreter\n",
-    "interpreter.state[\"search\"] = search\n",
-    "interpreter.state[\"synthesize\"] = synthesize\n",
+    "# TODO: Implement this\n",
+    "pass\n",
     "# </solution>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1ed3b14c",
+   "id": "4d7d5ff1",
    "metadata": {},
    "source": [
     "## 3. Define the Agent Logic\n",
@@ -141,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e514c46",
+   "id": "4e0009fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,6 +153,16 @@
     "Output ONLY the Python code. Do not wrap in markdown blocks if possible, or I will strip them.\n",
     "\"\"\"\n",
     "\n",
+    "def clean_code(code: str) -> str:\n",
+    "    \"\"\"\n",
+    "    Strips the code from markdown blocks if present.\n",
+    "    \"\"\"\n",
+    "    if \"```python\" in code:\n",
+    "        code = code.split(\"```python\")[1].split(\"```\")[0].strip()\n",
+    "    elif \"```\" in code:\n",
+    "        code = code.split(\"```\")[1].split(\"```\")[0].strip()\n",
+    "    return code\n",
+    "\n",
     "\n",
     "def run_coding_agent(user_query: str):\n",
     "    print(f\"--- [Agent] Goal: {user_query} ---\")\n",
@@ -173,41 +173,18 @@
     "    # 1. Invoke LLM to get code.\n",
     "    # 2. Clean code (strip ```python ... ```).\n",
     "    # 3. Execute using `interpreter`.\n",
+    "    # 4. Handle errors and retry.\n",
+    "    # Hint: Use a loop and feed back errors to the model.\n",
     "    # <solution>\n",
-    "    # 1. Generate Code\n",
-    "    response = llm.invoke(messages)\n",
-    "    code = response.content\n",
-    "\n",
-    "    # 2. Clean Code\n",
-    "    if \"```python\" in code:\n",
-    "        code = code.split(\"```python\")[1].split(\"```\")[0].strip()\n",
-    "    elif \"```\" in code:\n",
-    "        code = code.split(\"```\")[1].split(\"```\")[0].strip()\n",
-    "\n",
-    "    print(f\"--- [Agent] Generated Code ---\\n{code}\\n----------------------------\")\n",
-    "\n",
-    "    # 3. Execute\n",
-    "    try:\n",
-    "        # LocalPythonExecutor call returns the value of the last expression or print capture\n",
-    "        # smolagents uses `interpreter(...)`\n",
-    "        result = interpreter(code)\n",
-    "\n",
-    "        # We also capture stdout usually, but let's see what it returns\n",
-    "        # Combine return value and any captured prints\n",
-    "        captured_stdout = interpreter.state.get(\"_print_outputs\", \"\")\n",
-    "\n",
-    "        final_output = f\"Stdout:\\n{captured_stdout}\\n\\nReturn Value:\\n{result}\"\n",
-    "        return final_output\n",
-    "\n",
-    "    except Exception as e:\n",
-    "        return f\"Execution Code Error: {e}\"\n",
+    "    # TODO: Implement this\n",
+    "    pass\n",
     "    # </solution>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c5c76bf",
+   "id": "25e138f6",
    "metadata": {},
    "outputs": [],
    "source": [
