--- a/exercises/08_image_understanding.ipynb
+++ b/exercises/08_image_understanding.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8f3dad9e",
+   "id": "e83b6e17",
    "metadata": {},
    "source": [
     "# Exercise 8: Image Understanding\n",
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed649548",
+   "id": "cc25e73b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95962740",
+   "id": "fb800fc8",
    "metadata": {},
    "source": [
     "We'll be working with Databricks LLMs that support vision capabilities.\n",
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cfc77f5",
+   "id": "3e6f4e2e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56921dfe",
+   "id": "9e726212",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,31 +101,15 @@
     "\n",
     "    start_message_content = []\n",
     "\n",
-    "    # Simple check if it's a URL or local file\n",
-    "    if image_input.startswith(\"http\"):\n",
+    "    try:\n",
+    "        # Exercise 8.1.1: Request processing of the image\n",
     "        # <solution>\n",
-    "        base64_image = encode_image_from_url(image_input)\n",
-    "        start_message_content.append(\n",
-    "            {\n",
-    "                \"type\": \"image_url\",\n",
-    "                \"image_url\": {\"url\": f\"data:image/jpeg;base64,{base64_image}\"},\n",
-    "            }\n",
-    "        )\n",
+    "        # TODO: Implement this\n",
+    "        pass\n",
     "        # </solution>\n",
-    "    else:\n",
-    "        try:\n",
-    "            # <solution>\n",
-    "            base64_image = encode_image(image_input)\n",
-    "            start_message_content.append(\n",
-    "                {\n",
-    "                    \"type\": \"image_url\",\n",
-    "                    \"image_url\": {\"url\": f\"data:image/jpeg;base64,{base64_image}\"},\n",
-    "                }\n",
-    "            )\n",
-    "            # </solution>\n",
-    "        except Exception as e:\n",
-    "            print(f\"Error loading image: {e}\")\n",
-    "            return\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error loading image: {e}\")\n",
+    "        return\n",
     "\n",
     "    # Add initial instruction\n",
     "    start_message_content.insert(\n",
@@ -143,19 +127,17 @@
     "        if user_input.lower() in [\"exit\", \"quit\"]:\n",
     "            break\n",
     "\n",
-    "        # Exercise 8.1.1: Add user message and invoke model\n",
+    "        # Exercise 8.1.3: Add user message and invoke model\n",
     "        # <solution>\n",
-    "        chat_history.append(HumanMessage(content=user_input))\n",
-    "        response = model.invoke(chat_history)\n",
-    "        print(f\"AI: {response.content}\")\n",
-    "        chat_history.append(response)\n",
+    "        # TODO: Implement this\n",
+    "        pass\n",
     "        # </solution>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3243e5a7",
+   "id": "37de922a",
    "metadata": {},
    "outputs": [],
    "source": [
