--- a/labs/lab_01_deep_research.ipynb
+++ b/labs/lab_01_deep_research.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5e4ac772",
+   "id": "6ad52006",
    "metadata": {},
    "source": [
     "# Lab 1: Deep Research Agent with Multi-Agent System\n",
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cdc13e2a",
+   "id": "76cd0679",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0ad5c1a",
+   "id": "a2df1e95",
    "metadata": {},
    "source": [
     "## Setup\n",
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "035c5ee4",
+   "id": "5b4cf282",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75f391ba",
+   "id": "dbc699ee",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -92,85 +92,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a341547",
+   "id": "2c9a21c8",
    "metadata": {
     "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": [
-    "# Exercise 1: Define the State classes. Use either pydantic classes or `TypedDict`\n",
+    "# Exercise 1.1: Define the State classes as described above. Use either pydantic classes or `TypedDict`.\n",
+    "# Hint: Use `operator.add` to append new outputs to the list instead of overwriting.\n",
     "# <solution>\n",
-    "class SubTaskState(TypedDict):\n",
-    "    \"\"\"State for a single research worker agent.\"\"\"\n",
-    "\n",
-    "    topic: str\n",
-    "    result: str\n",
-    "\n",
-    "\n",
-    "class ResearchState(TypedDict):\n",
-    "    \"\"\"Global state for the entire graph.\"\"\"\n",
-    "\n",
-    "    topic: str\n",
-    "    sub_topics: List[str]\n",
-    "    # Use operator.add to append new outputs to the list instead of overwriting\n",
-    "    research_outputs: Annotated[List[str], operator.add]\n",
-    "    final_report: str\n",
-    "\n",
-    "\n",
+    "# TODO: Implement this\n",
+    "pass\n",
     "# </solution>\n",
-    "\n",
-    "\n",
-    "class ResearchPlan(BaseModel):\n",
-    "    \"\"\"Structured output for the Chief Editor.\"\"\"\n",
-    "\n",
-    "    sub_topics: List[str] = Field(\n",
-    "        description=\"List of 3 distinct sub-topics to research in parallel\"\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b7105dbc",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
-   "source": [
-    "## Exercise 2: Define Nodes\n",
-    "\n",
-    "We need three nodes:\n",
-    "\n",
-    "1. **Chief Editor**: breaks the topic into sub-topics.\n",
-    "2. **Research Worker**: searches for information on a sub-topic.\n",
-    "3. **Writer**: compiles the report."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "46d32852",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
-   "outputs": [],
-   "source": [
-    "def chief_editor_node(state: ResearchState):\n",
-    "    print(f\"--- [Chief Editor] Planning: {state['topic']} ---\")\n",
-    "\n",
-    "    # Exercise 2.1: Implement the Chief Editor\n",
-    "    # Use the LLM to generate a 'ResearchPlan' from the topic.\n",
-    "    # Hint: have a look at https://docs.langchain.com/oss/python/langchain/structured-output\n",
-    "    # <solution>\n",
-    "    planner = llm.with_structured_output(ResearchPlan)\n",
-    "    prompt = (\n",
-    "        f\"You are a Research Manager. Your goal is to break down the following research topic into 3 distinct, \"\n",
-    "        f\"targeted sub-topics that will convince a search engine to reveal specific facts, numbers, or data points.\\n\\n\"\n",
-    "        f\"Topic: {state['topic']}\\n\\n\"\n",
-    "        f\"Return 3 distinct sub-topics.\"\n",
-    "    )\n",
-    "    plan = planner.invoke(prompt)\n",
-    "\n",
-    "    return {\"sub_topics\": plan.sub_topics}\n",
-    "    # </solution>\n",
     "\n",
     "\n",
     "def research_worker_node(state: SubTaskState):\n",
@@ -180,12 +113,8 @@
     "    # Exercise 2.2: Implement the Research Worker\n",
     "    # Use 'search_tool' to find info and return it in 'research_outputs'.\n",
     "    # <solution>\n",
-    "    try:\n",
-    "        res = search_tool.invoke(topic)\n",
-    "    except Exception as e:\n",
-    "        res = f\"Search failed: {e}\"\n",
-    "\n",
-    "    return {\"research_outputs\": [f\"## Subtopic: {topic}\\n{res}\\n\"]}\n",
+    "    # TODO: Implement this\n",
+    "    pass\n",
     "    # </solution>\n",
     "\n",
     "\n",
@@ -195,29 +124,14 @@
     "    # Exercise 2.3: Implement the Writer\n",
     "    # Combine 'research_outputs' and ask the LLM to write a report.\n",
     "    # <solution>\n",
-    "    combined_content = \"\\n\\n\".join(state[\"research_outputs\"])\n",
-    "\n",
-    "    prompt = f\"\"\"\n",
-    "    You are a technical writer. Compile the following research notes into a comprehensive final report.\n",
-    "\n",
-    "    Topic: {state[\"topic\"]}\n",
-    "\n",
-    "    Research Notes:\n",
-    "    {combined_content}\n",
-    "\n",
-    "    Instructions:\n",
-    "    1. Synthesize the information into a clear, well-structured report.\n",
-    "    2. End with a \"Final Answer:\" section.\n",
-    "    \"\"\"\n",
-    "\n",
-    "    response = llm.invoke(prompt)\n",
-    "    return {\"final_report\": response.content}\n",
+    "    # TODO: Implement this\n",
+    "    pass\n",
     "    # </solution>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0b57a04f",
+   "id": "211f3bf0",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -235,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f8098f9",
+   "id": "67f5fb8b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,34 +157,22 @@
     "    # Exercise 3.1: Define the mapping logic\n",
     "    # Return a list of `Send` objects, one for each sub-topic.\n",
     "    # <solution>\n",
-    "    return [\n",
-    "        Send(\"research_worker\", {\"topic\": sub_topic})\n",
-    "        for sub_topic in state[\"sub_topics\"]\n",
-    "    ]\n",
+    "    # TODO: Implement this\n",
+    "    pass\n",
     "    # </solution>\n",
     "\n",
     "\n",
     "# Exercise 3.2: Build the Graph\n",
+    "# Hint: You will need add_conditional_edges to send the sub-topics to the workers.\n",
     "# <solution>\n",
-    "workflow = StateGraph(ResearchState)\n",
-    "\n",
-    "workflow.add_node(\"chief_editor\", chief_editor_node)\n",
-    "workflow.add_node(\"research_worker\", research_worker_node)\n",
-    "workflow.add_node(\"writer\", writer_node)\n",
-    "\n",
-    "workflow.add_edge(START, \"chief_editor\")\n",
-    "workflow.add_conditional_edges(\"chief_editor\", map_subtopics, [\"research_worker\"])\n",
-    "workflow.add_edge(\"research_worker\", \"writer\")\n",
-    "workflow.add_edge(\"writer\", END)\n",
-    "\n",
-    "# Compile the graph\n",
-    "app = workflow.compile()\n",
+    "# TODO: Implement this\n",
+    "pass\n",
     "# </solution>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "77b151c8",
+   "id": "d6f89754",
    "metadata": {},
    "source": [
     "### Run the Graph (Basic)"
@@ -279,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "633bbfad",
+   "id": "143cedd5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +191,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d836cd7",
+   "id": "8834fc14",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -309,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7eab37fc",
+   "id": "eda5b9d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,22 +224,11 @@
     "def planner_node(state: ResearchStateHITL):\n",
     "    print(f\"--- [Planner] Planning: {state['topic']} ---\")\n",
     "\n",
+    "    # Exercise 4.1: Implement the Planner\n",
+    "    # Use the LLM to generate a 'ResearchPlan' from the topic.\n",
     "    # <solution>\n",
-    "    planner = llm.with_structured_output(ResearchPlan)\n",
-    "\n",
-    "    # If there is a critique, we are regenerating\n",
-    "    if state.get(\"critique\"):\n",
-    "        print(f\"--- [Planner] Regenerating with critique: {state.get('critique')} ---\")\n",
-    "        prompt = f\"\"\"\n",
-    "        Original Topic: {state[\"topic\"]}\n",
-    "        Previous Plan: {state.get(\"sub_topics\")}\n",
-    "        User Critique: {state.get(\"critique\")}\n",
-    "\n",
-    "        Generate a new plan with 3 distinct sub-topics that addresses the critique.\n",
-    "        \"\"\"\n",
-    "    else:\n",
-    "        # Initial plan\n",
-    "        prompt = f\"Topic: {state['topic']}\\nReturn 3 distinct sub-topics.\"\n",
+    "    # TODO: Implement this\n",
+    "    pass\n",
     "    # </solution>\n",
     "\n",
     "    plan = planner.invoke(prompt)\n",
@@ -345,18 +236,10 @@
     "\n",
     "\n",
     "def reviewer_node(state: ResearchStateHITL):\n",
-    "    # Exercise 4: Add the interrupt\n",
+    "    # Exercise 4.2: Add the interrupt\n",
     "    # <solution>\n",
-    "    # Interrupt and wait for feedback\n",
-    "    # We allow the user to provide {\"approved\": True} or {\"critique\": \"...\"}\n",
-    "    feedback = interrupt(\n",
-    "        {\n",
-    "            \"sub_topics\": state[\"sub_topics\"],\n",
-    "            \"message\": \"Please review the research plan. Provide 'approved': True or 'critique': str.\",\n",
-    "        }\n",
-    "    )\n",
-    "    # The feedback from resume is expected to update the state\n",
-    "    return feedback\n",
+    "    # TODO: Implement this\n",
+    "    pass\n",
     "    # </solution>\n",
     "\n",
     "\n",
@@ -367,11 +250,11 @@
     "    - If not approved -> Loop back to planner\n",
     "    \"\"\"\n",
     "    if state.get(\"approved\"):\n",
-    "        # Map to workers\n",
-    "        return [\n",
-    "            Send(\"research_worker\", {\"topic\": sub_topic})\n",
-    "            for sub_topic in state[\"sub_topics\"]\n",
-    "        ]\n",
+    "        # Exercise 4.3: Send queries to research workers\n",
+    "        # <solution>\n",
+    "        # TODO: Implement this\n",
+    "        pass\n",
+    "        # </solution>\n",
     "\n",
     "    # Loop back\n",
     "    return \"planner\""
@@ -379,7 +262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81601eb3",
+   "id": "dd4b5dbd",
    "metadata": {},
    "source": [
     "### Re-build the Graph with HITL\n",
@@ -390,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59091c8c",
+   "id": "e5f2b13a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +308,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d10cae0a",
+   "id": "1a4b9073",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -441,7 +324,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "981a2bca",
+   "id": "0575a2e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49dbafc9",
+   "id": "32eaa0a8",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -530,7 +413,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ecc5764",
+   "id": "e6d13a5d",
    "metadata": {},
    "source": [
     "## Exercise 5 (Bonus): Benchmark Evaluation (GAIA)\n",
@@ -544,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e27eff4b",
+   "id": "6dc86401",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,14 +501,14 @@
     "\n",
     "        print(f\"\\nProcessing Task: {task_id}\")\n",
     "\n",
-    "        # --- Agent 1: Deep Research ---\n",
+    "        # Agent 1: Deep Research\n",
     "        result_dr = app.invoke({\"topic\": question})\n",
     "        predicted_dr = result_dr.get(\"final_report\", \"No report generated.\")\n",
     "        judge_resp_dr = query_judge_model(question, predicted_dr, truth, metadata)\n",
     "        score_dr = extract_score(judge_resp_dr)\n",
     "        print(f\"Deep Research Score: {score_dr}\")\n",
     "\n",
-    "        # --- Agent 2: ReAct Baseline ---\n",
+    "        # Agent 2: ReAct Baseline\n",
     "        result_react = agent_react.invoke({\"messages\": [question]})\n",
     "        predicted_react = result_react[\"messages\"][-1].content\n",
     "        judge_resp_react = query_judge_model(question, predicted_react, truth, metadata)\n",
