--- a/labs/lab_02_advanced.ipynb
+++ b/labs/lab_02_advanced.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "dbe27099",
+   "id": "822ebdd5",
    "metadata": {},
    "source": [
     "# Lab 2: Multi-Agent System (MAS) with Progressive Disclosure\n",
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd5aaa03",
+   "id": "eb998519",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5e989ee",
+   "id": "8f43287e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9684aba",
+   "id": "e29c0d03",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b510db2a",
+   "id": "ba88589e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,8 @@
     "    # Exercise 2.1: Create a ReAct agent using `create_agent`\n",
     "    # Hint: pass the llm and the list of tools ([web_search])\n",
     "    # <solution>\n",
-    "    return create_agent(llm, tools=[web_search])\n",
+    "    # TODO: Implement this\n",
+    "    pass\n",
     "    # </solution>\n",
     "\n",
     "\n",
@@ -118,13 +119,14 @@
     "    # Exercise 2.2: Create a coding agent\n",
     "    # Hint: Use `create_agent` with [exec_python] tool\n",
     "    # <solution>\n",
-    "    return create_agent(llm, tools=[exec_python])\n",
+    "    # TODO: Implement this\n",
+    "    pass\n",
     "    # </solution>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "de7d806a",
+   "id": "9fcc7084",
    "metadata": {},
    "source": [
     "## 2. Tool Registry & Discovery Mechanism\n",
@@ -135,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe5bb16e",
+   "id": "55e086cd",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -164,8 +166,8 @@
     "    # Exercise 2.3: Implement Tool Discovery\n",
     "    # Iterate over TOOL_REGISTRY and format the name and description for the LLM.\n",
     "    # <solution>\n",
-    "    for name, info in TOOL_REGISTRY.items():\n",
-    "        results.append(f\"- Tool: {name}\\n  Description: {info['description']}\")\n",
+    "    # TODO: Implement this\n",
+    "    pass\n",
     "    # </solution>\n",
     "    return \"\\n\".join(results)\n",
     "\n",
@@ -186,24 +188,14 @@
     "    # 2. Invoke the agent with the task (wrapped in HumanMessage)\n",
     "    # 3. Return the content of the last message\n",
     "    # <solution>\n",
-    "    # 1. Instantiate the agent (Just-In-Time)\n",
-    "    agent_app = entry[\"factory\"]()\n",
-    "\n",
-    "    # 2. Invoke the agent\n",
-    "    # The sub-agent expects a list of messages.\n",
-    "    try:\n",
-    "        result = agent_app.invoke({\"messages\": [HumanMessage(content=task)]})\n",
-    "        # 3. Extract final response\n",
-    "        last_msg = result[\"messages\"][-1]\n",
-    "        return last_msg.content\n",
-    "    except Exception as e:\n",
-    "        return f\"Error executing {tool_name}: {e}\"\n",
+    "    # TODO: Implement this\n",
+    "    pass\n",
     "    # </solution>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ef56e1e7",
+   "id": "ffc13494",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -216,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "561096eb",
+   "id": "b1ccfa3a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,9 +227,8 @@
     "    # Exercise 2.5: Create the Main Agent\n",
     "    # Give it access to `search_tools` and `call_tool`.\n",
     "    # <solution>\n",
-    "    return create_agent(\n",
-    "        llm, tools=[search_tools, call_tool], system_prompt=system_prompt\n",
-    "    )\n",
+    "    # TODO: Implement this\n",
+    "    pass\n",
     "    # </solution>\n",
     "\n",
     "\n",
@@ -246,7 +237,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "830bac20",
+   "id": "8c112370",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -259,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c9a6635",
+   "id": "33c25dfa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,11 +292,8 @@
     "        # Exercise 2.6: Invoke the Main Agent\n",
     "        # Invoke `main_agent` with the question and get the final response.\n",
     "        # <solution>\n",
-    "        try:\n",
-    "            response = main_agent.invoke({\"messages\": [HumanMessage(content=question)]})\n",
-    "            predicted = response[\"messages\"][-1].content\n",
-    "        except Exception as e:\n",
-    "            predicted = f\"Error: {e}\"\n",
+    "        # TODO: Implement this\n",
+    "        pass\n",
     "        # </solution>\n",
     "\n",
     "        print(f\"[Result]: {predicted[:100]}...\")\n",
@@ -329,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa38ec6d",
+   "id": "57469149",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -349,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2c65604",
+   "id": "514083e5",
    "metadata": {},
    "outputs": [],
    "source": [
