--- a/exercises/02_rag.ipynb
+++ b/exercises/02_rag.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "06a9aa2c",
+   "id": "fe169c6f",
    "metadata": {},
    "source": [
     "# Exercise 2: RAG\n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbab9bb6",
+   "id": "6e40eac9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66e1ddf7",
+   "id": "828ee050",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4aef8db",
+   "id": "55d4f7f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f73e1c62",
+   "id": "55648e90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,8 +68,8 @@
     "    # Hint: Use `PyMuPDFLoader(file).load()`\n",
     "    for file in glob.glob(f\"{pdf_folder}/*.pdf\"):\n",
     "        # <solution>\n",
-    "        loader = PyMuPDFLoader(file)\n",
-    "        documents.extend(loader.load())\n",
+    "        # TODO: Implement this\n",
+    "        pass\n",
     "        # </solution>\n",
     "\n",
     "    if not documents:\n",
@@ -77,17 +77,17 @@
     "        return None\n",
     "\n",
     "    # Exercise 2.2: Split documents\n",
-    "    text_splitter = RecursiveCharacterTextSplitter(chunk_size=1000, chunk_overlap=200)\n",
+    "    # Hint: Use `RecursiveCharacterTextSplitter`\n",
     "    # <solution>\n",
-    "    splits = text_splitter.split_documents(documents)\n",
+    "    # TODO: Implement this\n",
+    "    pass\n",
     "    # </solution>\n",
     "\n",
-    "    # Exercise 2.3: Create vectorstore\n",
+    "    # Exercise 2.3: Create vectorstore.\n",
+    "    # Hint: Use the `InMemoryVectorStore` constructor.\n",
     "    # <solution>\n",
-    "    vectorstore = InMemoryVectorStore.from_documents(\n",
-    "        documents=splits,\n",
-    "        embedding=embed,\n",
-    "    )\n",
+    "    # TODO: Implement this\n",
+    "    pass\n",
     "    # </solution>\n",
     "    return vectorstore"
    ]
@@ -95,16 +95,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56c7a0b7",
+   "id": "cf0e5066",
    "metadata": {},
    "outputs": [],
    "source": [
     "def retrieve(vectorstore, query: str):\n",
     "    # Exercise 2.4: Implement a retriever using the vectorstore.\n",
-    "    # Hint: Use `vectorstore.as_retriever()` and `.invoke(query)`\n",
     "    # <solution>\n",
-    "    retriever = vectorstore.as_retriever()\n",
-    "    matching_docs = retriever.invoke(query)\n",
+    "    # TODO: Implement this\n",
+    "    pass\n",
     "    # </solution>\n",
     "    return [doc.page_content for doc in matching_docs]"
    ]
@@ -112,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18db2594",
+   "id": "288671c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,8 +129,8 @@
     "        \"Answer the question based on the context:\\nContext: {context}\\nQuestion: {question}\"\n",
     "    )\n",
     "    # <solution>\n",
-    "    chain = prompt | model\n",
-    "    response = chain.invoke({\"context\": \"\\n\".join(context), \"question\": query})\n",
+    "    # TODO: Implement this\n",
+    "    pass\n",
     "    # </solution>\n",
     "    print(f\"Question: {query}\")\n",
     "    print(f\"Answer: {response.content}\")\n",
