--- a/exercises/03_tool_calling.ipynb
+++ b/exercises/03_tool_calling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "be922d38",
+   "id": "63df5411",
    "metadata": {},
    "source": [
     "# Exercise 3: Tool Calling\n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "231b33ce",
+   "id": "e76c8e75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14e4e826",
+   "id": "9a6d30d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,18 +36,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee47c80f",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
+   "id": "f6a9aea3",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "model = ChatDatabricks(endpoint=\"databricks-claude-sonnet-4-5\")"
+    "from llm import model"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "fff8d3fd",
+   "id": "f2f5ad33",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -64,25 +62,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01dad669",
-   "metadata": {},
+   "id": "5ed878ca",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [],
    "source": [
-    "# Exercise 3.1: Define a tool using the decorator\n",
+    "# Exercise 3.1: Define a tool using the decorator. The tool should return the weather for a location.\n",
+    "# You can simply return a string for now (e.g. \"Cloudy, 15C\").\n",
     "# <solution>\n",
-    "@tool\n",
-    "# </solution>\n",
-    "def get_weather(location: str) -> str:\n",
-    "    \"\"\"Get the weather for a location.\"\"\"\n",
-    "    if \"Berlin\" in location:\n",
-    "        return \"Cloudy, 15C\"\n",
-    "    return \"Sunny, 25C\""
+    "# TODO: Implement this\n",
+    "pass\n",
+    "# </solution>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28e0ab3f",
+   "id": "f9fbe398",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +89,8 @@
     "\n",
     "    # Exercise 3.2: Bind the tool to the model. Use the .bind_tools method.\n",
     "    # <solution>\n",
-    "    model_with_tools = model.bind_tools(tools)\n",
+    "    # TODO: Implement this\n",
+    "    pass\n",
     "    # </solution>\n",
     "\n",
     "    query = \"What is the weather in Berlin?\"\n",
@@ -100,7 +98,8 @@
     "\n",
     "    # Exercise 3.3: Invoke the model to get the tool call\n",
     "    # <solution>\n",
-    "    ai_msg = model_with_tools.invoke(messages)\n",
+    "    # TODO: Implement this\n",
+    "    pass\n",
     "    # </solution>\n",
     "    messages.append(ai_msg)\n",
     "    print(f\"AI Call: {ai_msg.tool_calls}\")\n",
@@ -111,7 +110,8 @@
     "\n",
     "        # Invoke the selected tool\n",
     "        # <solution>\n",
-    "        tool_output = selected_tool.invoke(tool_call[\"args\"])\n",
+    "        # TODO: Implement this\n",
+    "        pass\n",
     "        # </solution>\n",
     "        print(f\"Tool Output: {tool_output}\")\n",
     "\n",
@@ -119,7 +119,8 @@
     "\n",
     "    # Exercise 3.5: Get the final response\n",
     "    # <solution>\n",
-    "    final_response = model_with_tools.invoke(messages)\n",
+    "    # TODO: Implement this\n",
+    "    pass\n",
     "    # </solution>\n",
     "    print(f\"Final Answer: {final_response.content}\")\n",
     "\n",
